# stellar

./: CMakeLists.txt  README.md
!PROJECT_TEMPLATE!/: CMakeLists.txt
!PROJECT_TEMPLATE!/source/: CMakeLists.txt
stellar/: CMakeLists.txt
stellar/include/stellar/: CMakeLists.txt
stellar/source/: CMakeLists.txt  Main.cpp
